kubernetes-volumes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homework-deployment
  namespace: homework
spec:
  replicas: 3
  selector:
    matchLabels:
      app: homework-app
  template:
    metadata:
      labels:
        app: homework-app
    spec:
      nodeSelector:
        homework: "true"
      containers:
      - name: web
        image: nginxinc/nginx-unprivileged
        readinessProbe:
          httpGet:
            path: /index.html
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 5
        ports:
        - containerPort: 8000
        lifecycle:
          preStop:
            exec:
              command: ["/bin/sh", "-c", "rm -f /homework/index.html"]
        resources:
          limits:
            cpu: "0.5"
            memory: "512Mi"
        volumeMounts:
        - name: homework-pvc-volume
          mountPath: /homework
        - name: homework-cm-volume
          mountPath: /homework/conf

        - name: nginx-conf
          mountPath: /etc/nginx/conf.d
          readOnly: true

      volumes:
      - name: homework-pvc-volume
        persistentVolumeClaim:
          claimName: homework-pvc
      - name: homework-cm-volume
        configMap:
          name: homework-cm

      - name: nginx-conf
        configMap:
          name: nginx-conf
          items:
            - key: nginx.conf
              path: nginx.conf

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
